fix horizontal scroll on mobile

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -2,7 +2,10 @@
     background-color: black;
     color: white;
     height: 100%;
-    width: 100%;
+    width: 95%;
+    padding: 5px;
+    margin: 5px;
+    overflow: auto;
 }
 
 .heading-text {
